[tool.poetry]
name = "arduino-robot"
version = "0.1.0"
description = ""
authors = ["carlos-cardoso <carlos.cardoso@tecnico.ulisboa.pt>"]

[tool.poetry.dependencies]
python = "^3.9"
platformio = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
